#233 migrate using https://docs.openrewrite.org/recipes/java/spring/boot3/upgradespringboot_3_2